--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
    <div class="center-container">
-     <div class="title">PROGRAM STATISTIC</div>
+     <div class="title"><span class="text">PROGRAM STATISTIC</span></div>
      <div class="line"></div>
      <div class="file-name-container">
-       <div class="file-title">file:</div>
+       <div class="file-title">filename:</div>
        <div class="file-name" id="file">haha.c</div>
      </div>
      <div class="file-name-container">
